# cot-faithfulness-auditor

./: .gitignore  AGENTS.md  CHECKPOINT.md  LICENSE  OVERVIEW.md  README.md  SPEC.md  env.example  pyproject.toml  requirements.txt
notebooks/: 01-data-prep.ipynb  06-visualize.ipynb
skills/: 01-data-prep.md  02-baseline-gen.md  03-exp1-truncation.md  04-exp2-corruption.md  05-exp3-bias.md  06-visualize.md  07-readme.md
src/: config.py  corrupt.py  llm.py  run_baseline.py  run_exp1_truncation.py  run_exp2_corruption.py  run_exp3_bias.py  run_visualize.py  runner.py  schema.py
src/experiments/: baseline.py  bias.py  corruption.py  data_prep.py  truncation.py
tests/: test_baseline_gen.py  test_data_prep.py  test_exp1_truncation.py  test_exp2_corruption.py  test_exp3_bias.py  test_readme.py  test_visualize.py
