[project]
name = "cot-faithfulness-auditor"
version = "0.1.0"
description = "Test whether LLM chain-of-thought is causally linked to answers"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
