[project]
name = "cot-faithfulness-auditor"
version = "0.1.0"
description = "Test whether LLM chain-of-thought is causally linked to answers"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
cot-prep = "src.experiments.data_prep:main"
cot-baseline = "src.experiments.baseline:main"
cot-truncation = "src.experiments.truncation:main"
cot-corruption = "src.experiments.corruption:main"
cot-bias = "src.experiments.bias:main"
cot-visualize = "src.run_visualize:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
